define class `Counter` only once
The documentation defined the class `Counter` multiple times. Following the documented steps result in a compilation error like `Redeclaration: Counter`.